# BLonD

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  .travis.yml  BenchMark_BBresonator.py  BenchMark_BBresonator_longitudinal.py  CHANGELOG  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  SR_QE_tests.py  SRtests_pure_damping_FCCee.py  Stationary.py  WARNINGS.txt  appveyor.yml  assembler-notes.md  beams.html  compile.py  cuda-shmem-hot-bins.ipynb  cython_functions.html  delete_empty.py  exercise_longitudinal.py  file_damped_distribution_wanted_parameters.py  genindex.html  impedances.html  index.html  input_parameters.html  llrf.html  longitudinal_plots.py  main.py  main_longitudinal.py  modules.html  monitors.html  monkeytype_maker.py  objects.inv  parameter_scaling_qt.py  (+24 more)
ALEX_input&main_files/: main.py  several_sections.py
DANILO_input&main_files/: main_longitudinal.py
FFT/: RF_noise.py
HELGA_input&main_files/: Stationary.py  Stationary_long.py  Stationary_transv.py
LLRF/: RF_noise.py  plot_llrf.py
Simulations_ramps/: animation_script_from_elle.py
_ALEX/: main.py  several_sections.py
_EXAMPLE_MAIN_FILES/: Acceleration.py  Stationary_multistation.py
_HELGA/: Acceleration.py  RFnoise.py  Stationary_long.py
_Helga/: RFnoise.py
__BENCHMARKS/: .gitignore  BM10_ACS_OTFB.py  BM10_ACS_simple_model.py  BM11_ACS_OTFB.py  BM1_OTFB_Vind_beam_1.py  BM2_OTFB_no_beam.py  BM3_OTFB_moving_average.py  BM3_OTFB_transmitter_gain.py  BM4_OTFB_moving_average.py  BM4_OTFB_with_beam.py  BM5_ACS_open_loop.py  BM5_OTFB_feedforward.py  BM5_OTFB_with_beam.py  BM6_ACS_closed_loop.py  BM6_ACS_open_loop.py  BM6_OTFB_feedforward.py  BM7_ACS_open_loop.py  BM7_ACS_with_beam.py  BM8_ACS_closed_loop.py  BM8_ACS_simple_model.py  BM8_ACS_with_beam.py  BM9_ACS_OTFB.py  BM9_ACS_with_beam.py  BM_01_OTFB_Vind_beam_1.py  BM_02_OTFB_no_beam.py  BM_03_OTFB_transmitter_gain.py  BM_04_OTFB_moving_average.py  BM_05_OTFB_with_beam.py  BM_10_ACS_simple_model.py
__EXAMPLE_MAIN_FILES/: Longitudinal_for_transverse_use.py  Stationary_multistation.py  _Acceleration.py  _Impedance_ps_booster.py  _LHC_BUP.py  _Longitudinal_for_transverse_use.py  _Main_long_ps_booster.py  _Phase_loop.py  _RFnoise.py  _Sps_main.py  _Stationary_multistation.py  _Wake_impedance.py
__doc/: Makefile  README.md  conf.py  index.rst  make.bat  myconf.py
_sources/: index.txt  input_parameters.txt  llrf.txt  modules.txt  monitors.txt  setup_cython.txt  toolbox.txt  trackers.txt
_static/: basic.css  default.css  documentation_options.js
beam/: beam.py  coasting_beam.py  distributions.py  distributions_multibunch.py  profile.py  sparse_slices.py
beams/: .distributions.py.swp  beam.py  beams.py  bunch.py  coasting_beam.py  distributions.py  distributions_multibunch.py  histogram.cpp  histogram_par.cpp  longitudinal_distributions.py  matching.py  slices.py  sparse_slices.py  transverse_distributions.py
blond/: __init__.py  compile.py  sanity_check.py  setup_cpp.py
blond3/: EX_01_Acceleration.py  EX_02_Acceleration.py  EX_MuonCollider.py  __init__.py  backend.py  classes.py  deleteme.py  deleteme2.py  main_user.py  plot_class_diagram.png.py  plot_pycallgraph.png.py
cpp_routines/: blondmath.cpp  blondmath_wrap.py  drift.cpp  drift_simple.cpp  exp.h  fast_resonator.cpp  histogram.cpp  histogram_par.cpp  kick.cpp  kicks.cpp  linear_interp_kick.cpp  mean_std_whereint.cpp  music_track.cpp  sparse_histogram.cpp  vdtcore_common.h
cython_functions/: stats.pyx
cython_routines/: kick.pyx
developer_tools/: README.md
doc/: Makefile  make.bat
elle_scripts/: testing_ring.py
gpu_main_files/: EX_01_Acceleration.py
impedances/: fast_resonator.cpp  impedance.py  impedance_sources.py  induced_voltage_analytical.py  longitudinal_impedance.py  music.py  music_track.cpp  next_regular.py  transverse_impedance.py
input_parameters/: general_parameters.py  preprocess.py  rf_paramaters_options.py  rf_parameters.py  rf_parameters_options.py  ring.py  ring_options.py  simulation_parameters.py  utilities.py
legacy/: README.md  appveyor.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-lint.txt  sanity_check.py
llrf/: RF_noise.py  beam_feedback.py  cavity_feedback.py  feedbacks.py  filters.py  impulse_response.py  notch_filter.py  offset_frequency.py  phase_loop.py  rf_modulation.py  rf_noise.py  signal_processing.py
longitudinal_plots/: longitudinal_plots.py  plot_beams.py  plot_impedance.py  plot_llrf.py  plot_slices.py
modules/: beam.html  compile.html  equations_of_motion.html  impedances.html  input_parameters.html  lhc_cavity_loop.html  llrf.html  monitors.html  plots.html  setup_cpp.html  sps_cavity_loop.html  synchrotron_radiation.html  toolbox.html  trackers.html  utils.html
monitors/: monitors.py
mpi/: RFnoise_mpi.py  longitudinal_tracker_mpi.py  mpi_config.py
notebooks/: cuda-shmem-hot-bins.ipynb  inter-node-traffic-reduction.ipynb  k40-v100-projection.ipynb
plots/: longitudinal_plots.py  plot.py  plot_beams.py  plot_impedance.py  plot_llrf.py  plot_parameters.py  plot_settings.py  plot_slices.py
simu_acceleration/: Acceleration_simulation_Z_mode.py  Acceleration_simulation_Z_mode_wigglers.py  Acceleration_simulation_Z_mode_wigglers_new_filling_factor.py  plots_theory.py
simu_acceleration_positron/: Acceleration_simulation_Z_mode_positron.py  Acceleration_simulation_Z_mode_positron_wigglers.py  Acceleration_simulation_Z_mode_positron_wigglers_new_filling_factor.py  functions_wiggler.py
synchrotron_radiation/: quantum_excitation_boost.cpp  quantum_excitation_std.cpp  synchrotron_radiation.cpp  synchrotron_radiation.h  synchrotron_radiation.py
toolbox/: action.py  convolution.py  diffusion.py  filters_and_fitting.py  logger.py  logs.py  next_regular.py  parameter_scaling.py  parameter_scaling_qt.py  tomoscope.cpp  tomoscope.py
trackers/: longitudinal_tracker.py  longitudinal_tracker_old.py  longitudinal_utilities.py  ring_and_RF.py  ring_and_RFstation.py  tracker.py  transverse_tracker.py  utilities.py
unittests/: conftest.py  (+6 more)
(+1547 files in other folders)
