[metadata]
name = blond
author = Helga Timko
author_email = helga.timko@cern.ch
maintainer = Konstantinos Iliakis
description = CERN code for simulating longitudinal beam dynamics in synchrotrons.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.cern.ch/blond/BLonD
license = GPL
license_files = 
    LICENSE.txt
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy>=1.20
    scipy
    h5py
    matplotlib>=3.7
    mpmath
include_package_data = True

[options.extras_require]
test = 
    pytest
lint = 
    flake8
    isort
    pylint
doc =
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-napoleon
    sphinx-autopackagesummary
    pyqt5
all = 
    %(test)s
    %(doc)s
    %(lint)s
